--- a/pages/student/social-service.html
+++ b/pages/student/social-service.html
@@ -163,6 +163,91 @@
                 <img src="/assests/images/student/social-service/events/img2.jpg" alt="">
             </div>
         </div>
+        <div>
+            <div class="mY20">
+                4) Психолого-педагогическое просвещение в поддержку личностного профессионального роста и
+                самоопределения
+                обучающихся, педагогов.
+            </div>
+
+            <ul style="padding-left: calc(1rem + 5px);">
+                <li>психологические часы;</li>
+                <li>классные часы;</li>
+                <li>семинары;</li>
+                <li>вебинары;</li>
+                <li>родительские собрания;</li>
+                <li>педагогические советы;</li>
+                <li>проведение интерактивных методов;</li>
+                <li>лекций для родителей и иных законных представителей.</li>
+            </ul>
+        </div>
+        <div class="mY40">
+            <div class="fs-200 fw-medium mY10">
+                Психологические вебинары
+            </div>
+            <div class="flex wrap image_wrapper">
+                <img src="/assests/images/student/social-service/vebinars/img1.jpg" alt="">
+                <img src="/assests/images/student/social-service/vebinars/img2.jpg" alt="">
+            </div>
+        </div>
+        <div class="mY40">
+            <div class="fs-200 fw-medium mY10">
+                Тематические психологические часы
+            </div>
+            <img src="/assests/images/student/social-service/tematic_hours.jpg" alt="">
+        </div>
+        <div class="mY40">
+            <div class="fs-200 fw-medium mY10">
+                Выступления на родительских собраниях
+            </div>
+            <div class="flex wrap image_wrapper">
+                <img src="/assests/images/student/social-service/parent_conferences/img1.jpg" alt="">
+                <img src="/assests/images/student/social-service/parent_conferences/img2.jpg" alt="">
+            </div>
+        </div>
+        <div class="mY40">
+            <div class="fs-200 fw-medium mY10">
+                Выступления на педагогическом совете
+            </div>
+            <div class="flex wrap image_wrapper">
+                <img src="/assests/images/student/social-service/teachers_soviet/img1.jpg" alt="">
+                <img src="/assests/images/student/social-service/teachers_soviet/img2.jpg" alt="">
+            </div>
+        </div>
+        <div class="mY40">
+            <div class="fs-200 fw-medium mY10">
+                Семинары для пед.коллектива
+            </div>
+            <div class="flex wrap image_wrapper">
+                <img src="/assests/images/student/social-service/seminars/img1.jpg" alt="">
+                <img src="/assests/images/student/social-service/seminars/img2.jpg" alt="">
+                <img src="/assests/images/student/social-service/seminars/img3.jpg" alt="">
+                <img src="/assests/images/student/social-service/seminars/img4.jpg" alt="">
+            </div>
+        </div>
+        <div class="mY20">
+            5) Организационно-методическое направление предполагает мониторинг состояния образовательно-развивающей
+            среды, разработку рекомендаций по образовательному процессу, организацию и проведение семинаров, тренингов и
+            консультаций по освоению технологий психологического сопровождения обучающихся.
+        </div>
+        <div class="mY40">
+            <div class="fs-200 fw-medium mY10">
+                Организация творческих конкурсов
+            </div>
+            <div class="flex wrap image_wrapper">
+                <img src="/assests/images/student/social-service/creative_concourses/img1.jpg" alt="">
+                <img src="/assests/images/student/social-service/creative_concourses/img2.jpg" alt="">
+            </div>
+        </div>
+        <div class="mY40">
+            <div class="fs-200 fw-medium mY10">
+                Разработка памяток и буклетов
+            </div>
+            <div class="flex wrap image_wrapper">
+                <img src="/assests/images/student/social-service/memorials/img1.jpg" alt="">
+                <img src="/assests/images/student/social-service/memorials/img2.jpg" alt="">
+            </div>
+        </div>
     </main>
     <footer-component></footer-component>
     <scroll-component></scroll-component>
