--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="news container">
             <div class="flex spb heading newsHeading">
                 <div class="block-title">Последние новости</div>
-                <link-component href="" text="Смотреть все новости" class="newsLink"></link-component>
+                <link-component href="/pages/news/index.html" text="Смотреть все новости" class="newsLink"></link-component>
             </div>
             <div class="news-block-wrapper newsWrapper">
                 <div class="news-block">
@@ -63,7 +63,7 @@
                         <span class="date">15.11.2022</span>
                         <span class="descr">Студентки ПТК «Казахмыс», группы МЦМ-21-9 Болаткан Нурай и Болатова Әдемі,
                             под руководством Садырбаевой Разии Турсуновны</span>
-                        <link-component href="" class="primary" text="Читать далее"></link-component>
+                        <link-component href="/pages/news/news1.html" class="primary" text="Читать далее"></link-component>
                     </div>
                 </div>
                 <div class="news-block">
@@ -72,7 +72,7 @@
                         <span class="date">15.11.2022</span>
                         <span class="descr">В КГКП «Усть-Каменогорский высший политехнический колледж» прошел второй
                             этап II-го республиканского конкурса профессионального мастерства </span>
-                        <link-component href="" class="primary" text="Читать далее"></link-component>
+                        <link-component href="/pages/news/news2.html" class="primary" text="Читать далее"></link-component>
                     </div>
                 </div>
                 <div class="news-block">
@@ -81,7 +81,7 @@
                         <span class="date">15.11.2022</span>
                         <span class="descr">Началась областная неделя финансовой грамотности, организованная
                             учебно-методическим центром развития образования Карагандинской области</span>
-                        <link-component href="" class="primary" text="Читать далее"></link-component>
+                        <link-component href="/pages/news/news3.html" class="primary" text="Читать далее"></link-component>
                     </div>
                 </div>
             </div>
