--- a/pages/projects/wordskills.html
+++ b/pages/projects/wordskills.html
@@ -10,38 +10,26 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assests/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
 
-    <title>Обучение</title>
+    <title>WordSkills</title>
 
     <script src="/js/header.js"></script>
     <script src="/js/footer.js"></script>
     <script src="/js/goUp.js"></script>
     <script src="/js/link.js"></script>
-    <link rel="stylesheet" href="/css/education.css">
+    <link rel="stylesheet" href="/css/projects.css">
 </head>
 
 <body>
-    <header-component class="transparent"></header-component>
+    <header-component></header-component>
     <main class="responsive" style="padding: 0;">
-        <div class="main-hero dark-bg">
-            <span>Обучение</span>
-            <img src="/assests/images/education/hero.jpg" alt="">
+      <div class="container">
+        <div class="title">WordSkills</div>
+        <div class="breadcrumb">
+            <a href="/">Главная</a>
+            <a href="/pages/projects/index.html">Проекты</a>
+            <span>WordSkills</span>
         </div>
-        <div class="container">
-            <div class="position flex wrap">
-                <div class="fs-500 fw-medium">
-                    Лицензия на занятие образовательной деятельностью
-                </div>
-                <div class="file-card">
-                    <span class="file-card-title">
-                        Лицензия
-                    </span>
-                    <div class="flex spb file-card-link">
-                        <img src="/assests/icons/file.svg" alt="File icon">
-                        <link-component href="#" text="Посмотреть материал" class="yellow blank"></link-component>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
         <div class="switcher">
             <div class="tab tab1 active" for="dual">
                 <span>Дуальное обучение</span>
