directors blog started

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <video src="/assests/main-video.mp4" autoplay muted loop></video>
         </div>
         <div class="quickActions flex wrap g10">
-            <a href="#" class="action">
+            <a href="/pages/enrollee/index.html" class="action">
                 Абитуриенту
             </a>
             <a href="#" class="action">
@@ -106,7 +106,7 @@
                             студентами, родителями, выпускниками, партнерами и теми, кто только собирается поступать в
                             наш колледж.
                         </div>
-                        <link-component text="Подробнее" class="primary"></link-component>
+                        <link-component href="/pages/directors-blog/index.html" text="Подробнее" class="primary"></link-component>
                     </div>
                 </div>
             </div>
