--- a/pages/student/index.html
+++ b/pages/student/index.html
@@ -37,7 +37,7 @@
                             <link-component text="Перейти" class="yellow"></link-component>
                         </div>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="file-card">
+                    <a href="/pages/student/education-portal.html" target="_blank" rel="noopener noreferrer" class="file-card">
                         <span class="file-card-title">
                             Портал <br> дистанцинного обучения
                         </span>
@@ -103,7 +103,7 @@
                             <link-component text="Перейти" class="yellow"></link-component>
                         </div>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="file-card">
+                    <a href="/pages/student/social-service.html" target="_blank" rel="noopener noreferrer" class="file-card">
                         <span class="file-card-title">
                             Социально-психологическая <br> служба
                         </span>
